[gd_scene load_steps=5 format=3 uid="uid://bugglxem35004"]

[ext_resource type="Script" path="res://Scripts/Entities/player.gd" id="1_13jka"]
[ext_resource type="Texture2D" uid="uid://npli7g0d6l5h" path="res://Sprites/player_ship.png" id="2_5e2ls"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sa0pc"]
radius = 19.0
height = 104.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ay1cu"]
radius = 15.0333

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 28
script = ExtResource("1_13jka")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
texture = ExtResource("2_5e2ls")

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 12
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_sa0pc")
debug_color = Color(0.988235, 0, 0.301961, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource("CircleShape2D_ay1cu")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="Cannons" type="Node2D" parent="."]

[node name="RightCannon" type="Marker2D" parent="Cannons"]
unique_name_in_owner = true
position = Vector2(0, 19)

[node name="FrontCannon" type="Marker2D" parent="Cannons"]
unique_name_in_owner = true
position = Vector2(49, 0)

[node name="LeftCannon" type="Marker2D" parent="Cannons"]
unique_name_in_owner = true
position = Vector2(0, -19)

[node name="PlayerCamera" type="Camera2D" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
